K8s/ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mcgwebapp.dev
      http:
        paths:
          - path: /api/streams/
            pathType: Prefix
            backend:
              service:
                name: bids-srv
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: auth-gateway-srv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
